<resources>
    <string name="app_name">desafio</string>
    <string name="page_title">Digital House Foods</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_register">Register</string>
    <string name="page_register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_repeat">Repeat Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_tony">Foto de prato do restaurante Tony Roma\'s</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="home_endereco">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="home_horario">Fecha às 22:00</string>
    <string name="title">"Salada com molho Gengibre "</string>
    <string name="content_description_media">"Salada com molho Gengibre "</string>
    <string name="salada_com_molho_gengibre">Salada com molho Gengibre</string>
    <string name="sed_ut_perspiciatis_unde_omnis_iste_natus_error_sit_voluptatem_accusant_doloremque_laudantium_totam_rem_aperiam_eaque_ipsa_quae_ab_illo_inventore_veritatis">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
</resources>