<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">
        <com.google.android.material.appbar.MaterialToolbar
            app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
            android:id="@+id/registerTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/page_register"
            app:menu="@menu/other_top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTxtLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name"
            android:paddingHorizontal="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerTxtEdtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTxtLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_email"
            android:paddingHorizontal="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerTxtEdtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTxtLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            android:paddingHorizontal="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerTxtEdtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerTxtLayoutRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_repeat"
            android:paddingHorizontal="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerTxtEdtRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/registerBtnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="40dp"
        />
</LinearLayout>