<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/page_title"
            app:menu="@menu/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        android:paddingHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        android:paddingHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_log_in"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">
        <View
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="10dp"/>
        <View
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="40dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="80dp" />
</LinearLayout>